@@ -6,4 +6,6 @@
   :dependencies [[org.clojure/clojure "1.10.0"]]
   :main ^:skip-aot clojure-quips.core
   :target-path "target/%s"
+  ;; allowAttachSelf is necessary for Dynamic Attach on Java 9+ used by clj-async-profiler: https://github.com/clojure-goes-fast/clj-async-profiler#usage)
+  :jvm-opts ["-Djdk.attach.allowAttachSelf=true"]
   :profiles {:uberjar {:aot :all}})
